# alNaql

./: Cargo.toml  default.ini
data/source/: 224_أبو_عبيد_القاسم_غريب_الحديث.xml  276_ابن_قتيبة_غريب_الحديث_copy1.xml  285_إبراهيم_الحربي_غريب_الحديث_copy1.xml  285_الحربي_غريب_الحديث_copy1.xml  538_جار_الله_الزمخشري_الفايق_في_غريب_الحديث_copy1.xml  None_أبو_عبيد_الهروي_الغريبين_في_القرآن_والحديث_copy1.xml
data/state/: jobs_20250509_185929.20250509_185929.bak  jobs_20250509_185929.20250509_190115.bak  jobs_20250509_185929.20250509_190431.bak  jobs_20250509_185929.20250509_190432.bak  jobs_20250509_185929.20250509_190805.bak  jobs_20250509_185929.20250509_190806.bak  jobs_20250509_185929.20250509_191128.bak  jobs_20250509_185929.20250509_191129.bak  jobs_20250509_185929.20250509_191240.bak  jobs_20250509_185929.20250509_191708.bak  jobs_20250509_185929.20250509_191709.bak  jobs_20250509_185929.csv
filters/: banalities_phrases.txt  banalities_words_.txt  isnad_phrases.txt  isnad_words.txt  isnad_words_no_waw.txt  stop_words.txt  waw.py
src/: error.rs  lib.rs  types.rs
src/config/: file.rs  mod.rs
src/matcher/: algorithms.rs  banality.rs  concurrent.rs  mod.rs  ngram_pipeline.rs  parallel.rs  similarity.rs  types.rs
src/ngram/: mod.rs  types.rs
src/parser/: arabic.rs  mod.rs
src/storage/: metrics.rs  mod.rs
src/utils/: boundary_handler.rs  checkpoint.rs  cloud_signal.rs  discarded_logger.rs  job_tracker.rs  logger.rs  memory_manager.rs  mmap.rs  mod.rs  processing.rs  simd.rs  simd_deserialize.rs  simd_prefix.rs  sliding_window.rs  string.rs  tempfile.rs
(+30 files in other folders)
